<resources>
    <string name="app_name">First.fm</string>
    <string name="album_name_default_value">Default Album Name</string>
    <string name="album_image_content_description_default_value">Default Album Description</string>
    <string name="album_description_default_value">Default Album Description</string>
    <string name="button_detail_album_default_value">button</string>
    <string name="menu_profile_label">Profile</string>
    <string name="menu_main_label">Home</string>
    <string name="menu_scanner_label">Scanner</string>
    <string name="album_cover">Album cover</string>
    <string name="duration">Duration:\u0020</string>
    <string name="listeners">Listeners</string>
    <string name="listened">Listened</string>
    <string name="top_five_default_title_value">Default Title Value</string>
    <string name="default_profile_item_name_value">An item name</string>
    <string name="rank_value">1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">\@%1$s</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cant_get_top_albums">"Could not fetch top albums"</string>
    <string name="cant_get_user_info">"Could not fetch user info</string>
    <string name="cant_get_top_albums_image">"Could not fetch top albums image"</string>
    <string name="cant_get_top_tracks_image">"Could not fetch top tracks image"</string>
    <string name="cant_get_top_artists">"Could not fetch top artists"</string>
    <string name="cant_get_top_tracks">"Could not fetch top tracks"</string>
    <string name="default_album_name_value">Default Album Name</string>
    <string name="default_artist_name_value">Default Artist Name</string>
    <string name="default_username_value">Default username</string>
    <string name="list_title">Album List</string>
    <string name="pred_artist_name">By</string>
    <string name="play_count_with_value">Play Count: %1$s</string>
    <string name="listeners_with_value">Listeners: %1$s</string>
    <string name="profile_scrobbles">Scrobbles: %1$s</string>
    <string name="profile_subs">Subscribers: %1$s</string>
    <string name="track_list_title">%1$s\'s track list</string>
    <string name="listened_with_value">Listened\n%1$s</string>
    <string name="listeners_with_value">Listeners\n%1$s</string>
    <string name="on_tour_value">ON TOUR</string>
    <string name="track_list_title">Track list</string>
    <string name="album_list_title">Album list</string>
    <string name="no_track_list">No track list</string>
    <string name="no_album_list">No album list</string>
    <string name="album_detail_title">Album Detail Page</string>
    <string name="artist_detail_title">Artist Detail Page</string>
    <string name="artist_name_default_value">Artist Detail Page</string>
    <string name="artist_image_content_description_default_value">Default Album Description</string>
    <string name="log_out">Log out</string>
</resources>
