<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/albumPictureImageView"
        android:layout_width="@dimen/listPictureValue"
        android:layout_height="@dimen/listPictureValue"
        android:contentDescription="@string/album_image_content_description_default_value"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/albumNameTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_album_picture" />

    <TextView
        android:id="@+id/albumNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        android:text="@string/default_album_name_value"
        android:textSize="@dimen/listValueSize"
        app:layout_constraintBottom_toTopOf="@id/artistNameTextView"
        app:layout_constraintStart_toEndOf="@+id/albumPictureImageView"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/artistNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_artist_name_value"
        android:textSize="@dimen/subTitleTextSize"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/albumPictureImageView"
        app:layout_constraintTop_toBottomOf="@+id/albumNameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>